--- a/jogoDaVelha/jogoDaVelha.html
+++ b/jogoDaVelha/jogoDaVelha.html
@@ -4,32 +4,8 @@
 <head>
 
 	<title>velha's game</title>
-	
-	<style type="text/css">
-		
-		#mostrador{
-			margin: auto;
-			margin-top: 40px;
-			width: 252px;
-			height: 80px;
+	<link rel="stylesheet" href="css/style.css">
 
-		}
-
-		.espaco{
-			width: 80px;
-			height: 60px;
-			border: 2px solid #000;
-			float: left;
-			text-align: center;
-			padding-top: 20px;
-		}
-
-		.tabuleiro{
-			margin: auto;
-			width: 252px;
-			height: 252px;
-		}
-	</style>
 </head>
 
 <body>
@@ -53,7 +29,7 @@
 
 	</div>
  
- <script type="text/javascript" src="game.js"></script>
+ <script type="text/javascript" src="js/game.js"></script>
 
 </body>
 
