--- a/index.html
+++ b/index.html
@@ -5,31 +5,94 @@
 
 	<title>velha's game</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
 
 </head>
 
 <body>
-	<div id="mostrador">
-		<p style="float: left; margin-right: 10px;">Vez do Jogador:</p>	
-		<img src="" border="0" height="50">	
+	<main class="d-flex flex-column justify-content-center bg-info">
+	
+	<div class="bg-light rounded w-25 m-5 align-self-center p-5 row justify-content-center shadow">
+		<p class="lead">Vez do Jogador:</p>	
+		<img id="imageindicator" src="">	
 	</div>
 
-	<div class="tabuleiro">
-		<div id="a1" class="espaco" jogada=""></div>
-		<div id="a2" class="espaco" jogada=""></div>
-		<div id="a3" class="espaco" jogada=""></div>
+	<div class="board">
+		<div id="a1" class="pixel" turnOn=""></div>
+		<div id="a2" class="pixel" turnOn=""></div>
+		<div id="a3" class="pixel" turnOn=""></div>
 
-		<div id="b1" class="espaco" jogada=""></div>
-		<div id="b2" class="espaco" jogada=""></div>
-		<div id="b3" class="espaco" jogada=""></div>
+		<div id="b1" class="pixel" turnOn=""></div>
+		<div id="b2" class="pixel" turnOn=""></div>
+		<div id="b3" class="pixel" turnOn=""></div>
 
-		<div id="c1" class="espaco" jogada=""></div>
-		<div id="c2" class="espaco" jogada=""></div>
-		<div id="c3" class="espaco" jogada=""></div>
+		<div id="c1" class="pixel" turnOn=""></div>
+		<div id="c2" class="pixel" turnOn=""></div>
+		<div id="c3" class="pixel" turnOn=""></div>
 
 	</div>
- 
- <script type="text/javascript" src="js/game.js"></script>
+	<div class="d-flex mt-5 p-5 justify-content-center">
+	   <a class="btn btn-warning text-white mr-2 shadow" href="https://github.com/wend3ll-souza/TicTecToe" target="_blank">Repositório</a>
+	   <a class="btn btn-success text-white shadow"  href="https://wend3ll-souza.github.io/portfolio-web/" target="_blank">Portfolio Web</a>
+	  </div>
+ </main>
+   <footer id="contacts" class="bg-dark py-5">
+	   <section class="container d-flex justify-content-between">
+		   <div class="row py-5">
+			   <article id="moreAbout" class="col-lg-6 col-md-6 col-12 d-flex">
+				   <section class="container row d-flex align-items-center justify-content-around">
+					   <img class="img-perfil" src="./img/perfilImg.png" alt="foto de perfil">
+					   <p class="p-4 col-12 col-md-6 col-lg-6 text-white">Está página foi desenvolvida para compartilhar e colocar em
+						   prática meus estudos como <b>Desenvolverdor Full Stack</b>. Está em constante evolução,
+						   assim como meus conhecimentos. Visite meu <a target="_blank"
+							   href="https://www.linkedin.com/in/wendell-souza-5b13781a3/">LinkedIn</a> e não deixe de
+						   entrar em contato.</p>
+				   </section>
+			   </article>
+			   <div class="container d-flex row col-12 col-md-6 col-lg-6">
+				   <div class="col-lg-4 col-md-4 col-6">
+					   <h5 class="text-white">Entre em contato:</h5>
+					   <ul class="navbar-nav ml-auto" id="allLinks">
+						   <li class="list-item">
+							   <a target="_blank" class="mx-3"
+								   href="https://www.linkedin.com/in/bm-wendell-souza-5b13781a3/">
+								   <i class="fab fa-linkedin list-icon"> LinkedIn</i>
+							   </a>
+						   </li>
+						   <li class="list-item">
+							   <a target="_blank" class="mx-3" href="https://github.com/wend3ll-souza">
+								   <i class="fab fa-github-alt list-icon"> GitHub</i>
+							   </a>
+						   </li>
+						   <li class="list-item">
+							   <a target="_blank" class="mx-3" href="https://twitter.com/Wend3llSouza">
+								   <i class="fab fa-twitter list-icon"> Twitter</i>
+							   </a>
+						   </li>
+						   <li class="list-item">
+							   <a target="_blank" class="mx-3" href="https://www.behance.net/wend3llsouza">
+								   <i class="fab fa-behance-square list-icon"> Behance</i>
+							   </a>
+						   </li>
+						   <li class="list-item">
+							   <a target="_blank" class="mx-3" href="mailto:wend3llsouza@gmail.com">
+								   <i class="fab fa-behance-square list-icon"> Email</i>
+							   </a>
+						   </li>
+						   <li class="list-item">
+							   <a target="_blank" class="mx-3"
+								   href="https://api.whatsapp.com/send?phone=5519987650743">
+								   <i class="fab fa-whatsapp list-icon"> WhatsApp</i>
+							   </a>
+						   </li>
+					   </ul>
+				   </div>
+
+			   </div>
+		   </div>
+	   </section>
+   </footer>
+ <script type="text/javascript" src="js/script.js"></script>
 
 </body>
 
